feat:增加工厂模式-实例1(爱奇艺会员卡)