@@ -4,7 +4,7 @@ import com.alibaba.fastjson.JSON;
 import combatCode.模板模式.design.HttpClient;
 import combatCode.模板模式.design.NetMall;
 
-import sun.misc.BASE64Encoder;
+import java.util.Base64;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.regex.Matcher;
@@ -37,9 +37,9 @@ public class JDNetMall extends NetMall {
     }
     @Override
     public String createBase64(Map<String, String> goodsInfo) {
-        BASE64Encoder encoder = new BASE64Encoder();
+        Base64.Encoder  encoder = Base64.getEncoder ();
         logger.info("模拟生成京东商品base64海报");
-        return encoder.encode(JSON.toJSONString(goodsInfo).getBytes());
+        return encoder.encodeToString(JSON.toJSONString(goodsInfo).getBytes());
     }
 
 }
