@@ -3,8 +3,9 @@ package combatCode.模板模式.design.group;
 import com.alibaba.fastjson.JSON;
 import combatCode.模板模式.design.HttpClient;
 import combatCode.模板模式.design.NetMall;
-import sun.misc.BASE64Encoder;
 
+
+import java.util.Base64;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.regex.Matcher;
@@ -44,8 +45,8 @@ public class TaoBaoNetMall extends NetMall {
 
     @Override
     protected String createBase64(Map<String, String> goodsInfo) {
-        BASE64Encoder encoder = new BASE64Encoder();
+        Base64.Encoder  encoder = Base64.getEncoder ();
         logger.info("模拟生成淘宝商品base64海报");
-        return encoder.encode(JSON.toJSONString(goodsInfo).getBytes());
+        return encoder.encodeToString(JSON.toJSONString(goodsInfo).getBytes());
     }
 }
